# hybrid_pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  sweep_fine.csv  sweep_results.csv
.claude/: settings.local.json
airflow/: Dockerfile  requirements.txt
airflow/dags/: dbt_features_dag.py  ohlcv_backfill_dag.py
backtest/: engine.py  exit_simulation.py  metrics.py  run_backtest.py  sim_risk_manager.py  state.py  sweep.py
dashboard/: app.py
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/models/features/: _features__models.yml  feat_technical.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_ohlcv.sql
dbt/tests/: assert_no_future_timestamps.sql
docker/postgres/: init.sql
docs/: architecture.md
execution/: bot_runner.py  exchange_filters.py  risk_manager.py  trade_executor.py
ingestion/: binance_client.py  models.py  rest_backfill.py  validate.py  ws_producer.py
models/: scaler.pkl  xgboost_signal.pkl
signals/: aggregator.py  base.py  ml_model.py  sentiment.py  technical.py
streaming/: feature_processor.py  setup_topics.py
tests/: test_backtest_engine.py  test_backtest_exit_simulation.py  test_backtest_metrics.py  test_backtest_sim_risk_manager.py  test_backtest_sweep.py  test_exchange_filters.py  test_execution.py  test_ingestion.py  test_signals.py  test_streaming.py
